fix social icons align items property value

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -145,7 +145,7 @@ body {
     }
     &-icons {
         display: flex;
-        align-items: center;
+        align-items: baseline;
         gap: 1.2rem;
     }
 }
